Minigame api improvements